# opengroupware

./: .gitignore  .sops.yaml  Cargo.toml  README.md  Tiltfile  clippy.toml  justfile
crates/abuse-api/: Cargo.toml
crates/abuse-api/migrations/: 0001_abuse.sql
crates/abuse-api/src/: main.rs  models.rs  routes.rs
crates/admin-api/: Cargo.toml
crates/admin-api/migrations/: 0001_control_plane.sql  0002_app_role.sql  0003_abuse_policy.sql
crates/admin-api/src/: audit.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
crates/admin-console/: Cargo.toml
crates/admin-console/src/: app.rs  client.rs  main.rs
crates/config-compiler/: Cargo.toml
crates/config-compiler/src/: main.rs  render.rs
crates/config-schema/: Cargo.toml
crates/config-schema/src/: lib.rs
crates/job-runner/: Cargo.toml
crates/job-runner/src/: main.rs  reconcile.rs
crates/og-auth/: Cargo.toml
crates/og-auth/src/: lib.rs  mock.rs
crates/og-db/: Cargo.toml
crates/og-db/src/: db.rs  error.rs  lib.rs
crates/service-kit/: Cargo.toml
crates/service-kit/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/types/src/providers/: abuse.rs  backup.rs  identity.rs  mail.rs  mod.rs  search.rs  storage.rs
crates/webmail/: Cargo.toml
crates/webmail/src/: app.rs  main.rs
crates/wrappers/: Cargo.toml
crates/wrappers/src/: lib.rs  minio_storage.rs  rspamd_abuse.rs  sesame_client.rs  stalwart.rs  stalwart_backup.rs  stalwart_identity.rs  stalwart_mail.rs  tantivy_search.rs
deployment-configuration/clusters/dev/: opengroupware.yaml
deployment-configuration/profiles/dev/opengroupware/: kustomization.yaml
deployment-configuration/profiles/dev/opengroupware/bootstrap/: migration-job.yaml
deployment-configuration/profiles/dev/opengroupware/external-services/: authentik.yaml  clamav.yaml  grafana.yaml  kustomization.yaml  lldap.yaml  loki.yaml  minio.yaml  otel.yaml  pgbackrest.yaml  pgbouncer.yaml  postgresql.yaml  prometheus.yaml  redis.yaml  restic.yaml  rspamd.yaml  search.yaml  stalwart-config.yaml  stalwart.yaml
deployment-configuration/profiles/dev/opengroupware/ingress/: ingress.yaml  kustomization.yaml  tls.yaml
deployment-configuration/profiles/dev/opengroupware/runtime/: kustomization.yaml  secrets.yaml
deployment-configuration/profiles/dev/opengroupware/services/: abuse-api.yaml  admin-api.yaml  admin-console.yaml  config-compiler.yaml  job-runner.yaml  kustomization.yaml  rspamd.yaml  webmail.yaml
docker/: Dockerfile.prebuilt  Dockerfile.service
docs/: 01-component-catalog.md  02-greenfield-architecture.md  03-abuse-pipeline.md  04-domain-model-erd.md  05-build-roadmap.md  06-design-audit.md  07-multi-tenancy-isolation.md  08-security-model.md  09-kubernetes-deployment.md  10-foss-component-audit.md  11-deployment-plan.md  12-external-services-deployment.md  13-ownership-review.md
docs/adr/: 0004-mailbox-backend-selection.md  0005-data-ownership-boundary.md  0006-identity-architecture.md  0007-stalwart-016-config-model.md  0011-kubernetes-deployment.md  0012-rspamd-abuse-engine-integration.md
helm/: README.md
helm/opengroupware-microservice/: Chart.yaml  values.yaml
helm/opengroupware-microservice/templates/: _helpers.tpl  authentik-deployment.yaml  clamav-deployment.yaml  configmap.yaml  deployment.yaml  grafana-deployment.yaml  lldap-deployment.yaml  loki-statefulset.yaml  minio-statefulset.yaml  otel-daemonset.yaml  pgbackrest-cronjob.yaml  pgbouncer-deployment.yaml  postgresql-statefulset.yaml  prometheus-statefulset.yaml  redis-statefulset.yaml  restic-cronjob.yaml  rspamd-deployment.yaml  search-statefulset.yaml  service.yaml  stalwart-deployment.yaml
helm/opengroupware-microservice/values/: abuse-api.yaml  admin-api.yaml  admin-console.yaml  config-compiler.yaml  job-runner.yaml  webmail.yaml
scripts/: abuse-smoke.sh  admin-console-smoke.sh  config-compile-smoke.sh  deploy-shared-k8s.sh  mail-auth-e2e.sh  pre-commit  reconcile-smoke.sh  rspamd-abuse-smoke.sh  secrets-bootstrap.sh
scripts/k8s/: admin-api-deploy.yaml  authtest.yaml  jwks-probe.yaml  smoke.yaml
