[package]
name = "admin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-or-later"

[[bin]]
name = "admin-api"
path = "src/main.rs"

[dependencies]
service-kit = { path = "../service-kit" }
types = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
