[package]
name = "admin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-or-later"

[[bin]]
name = "admin-api"
path = "src/main.rs"

[dependencies]
service-kit = { path = "../service-kit" }
og-db = { path = "../og-db" }
og-auth = { path = "../og-auth" }
types = { workspace = true }
wrappers = { path = "../wrappers" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
