[package]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
name = "admin-console"
description = "Leptos-based admin console frontend"
license = "AGPL-3.0-or-later"

[[bin]]
name = "admin-console"
path = "src/main.rs"

[dependencies]
# Leptos — SSR only (no hydrate/wasm bin yet; see docs/13 §code verdict).
# `ssr` feature is required for leptos_axum server APIs to resolve.
leptos = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }

# Internal
types = { workspace = true }
wrappers = { path = "../wrappers" }
config-schema = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP server
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }



[lints]
workspace = true
