[package]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
name = "admin-console"
description = "Leptos-based admin console frontend"
license = "AGPL-3.0-or-later"

[[bin]]
name = "admin-console"
path = "src/main.rs"

[dependencies]
# Leptos — SSR only, used purely as a server-side templating layer
# (view! + RenderHtml::to_html). No hydrate/wasm bin (docs/13 §code verdict).
leptos = { workspace = true, features = ["ssr"] }

# admin-api client
reqwest = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

# HTTP server
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }



[lints]
workspace = true
