[package]
name = "config-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-or-later"

[[bin]]
name = "config-compiler"
path = "src/main.rs"

[dependencies]
service-kit = { path = "../service-kit" }
og-db = { path = "../og-db" }
config-schema = { path = "../config-schema" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
