[package]
name = "job-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-or-later"

[[bin]]
name = "job-runner"
path = "src/main.rs"

[dependencies]
service-kit = { path = "../service-kit" }
og-db = { path = "../og-db" }
types = { workspace = true }
wrappers = { path = "../wrappers" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
