[package]
name = "og-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared Postgres access for opengroupware API services: RLS SET-LOCAL tx wrapper, privileged-role guard, API error mapping, audit trail"
license = "AGPL-3.0-or-later"

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
