[package]
name = "types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared types, domain model, and provider interface traits"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[lints]
workspace = true
